add afyon towns population

--- a/data/aegean-towns.yml
+++ b/data/aegean-towns.yml
@@ -190,6 +190,8 @@
   - 
     name: "Tavşanlı, Kütahya, Türkiye"
   -
+    name: "Merkez, Afyonkarahisar, Türkiye"
+  -
     name: "Başmakçı, Afyonkarahisar, Türkiye"
   -
     name: "Bayat, Afyonkarahisar, Türkiye"
