change center names

--- a/data/aegean-towns.yml
+++ b/data/aegean-towns.yml
@@ -165,7 +165,9 @@
     name: "Serinhisar, Denizli, Türkiye"
   - 
     name: "Tavas, Denizli, Türkiye"
-  - 
+  -
+    name: "Kütahya merkez, Kütahya, Türkiye"
+  -
     name: "Altıntaş, Kütahya, Türkiye"
   - 
     name: "Aslanapa, Kütahya, Türkiye"
@@ -190,7 +192,7 @@
   - 
     name: "Tavşanlı, Kütahya, Türkiye"
   -
-    name: "Merkez, Afyonkarahisar, Türkiye"
+    name: "Afyonkarahisar merkez, Afyonkarahisar, Türkiye"
   -
     name: "Başmakçı, Afyonkarahisar, Türkiye"
   -
