add mugla towns population

--- a/data/aegean-towns.yml
+++ b/data/aegean-towns.yml
@@ -254,7 +254,7 @@
   -
     name: "Milas, Muğla, Türkiye"
   -
-    name: "Menteşe, Muğla, Türkiye"
+    name: "Muğla merkez, Muğla, Türkiye"
   -
     name: "Ortaca, Muğla, Türkiye"
   -
