add usak merkez

--- a/data/aegean-towns.yml
+++ b/data/aegean-towns.yml
@@ -226,7 +226,9 @@
   -
     name: "Sultandağı, Afyonkarahisar, Türkiye"
   -
-    name: "Şuhut, Afyonkarahisar, Türkiye" 
+    name: "Şuhut, Afyonkarahisar, Türkiye"
+  -
+    name: "Uşak merkez, Uşak, Türkiye"
   - 
     name: "Banaz, Uşak, Türkiye"
   - 
