complete new distances

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+/data/aegean-towns
 /data/aegean-towns-mis.yml
 .idea
 /data/paths
 /data/imbros
 /data/aegean-cities
 /data/turkey-cities
-/data/aegean-towns
+/data/aegean-towns-old
 
 
 # Byte-compiled / optimized / DLL files
